<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    tools:context="ufrj.devmob.votadevmob.newpoll.view.NewPollActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_pollKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Poll Key"
            android:textSize="32sp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/field_pollTitle"
            android:hint="@string/poll_title"
            android:textSize="24sp"
            android:inputType="textCapSentences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/field_pollPassword"
            android:inputType="textVisiblePassword"
            android:hint="Senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:id="@+id/toggle_answers"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textOff="@string/one_answer"
            android:textOn="@string/multiple_answers"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/field_pollOption"
                android:hint="@string/poll_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/button_addOption"
                android:text="@string/add_option"
                android:onClick="addOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/text_options"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/button_createPoll"
                android:text="@string/poll_create"
                android:onClick="requestNewPoll"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center|bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>