<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".result.PollResultActivity"
        tools:ignore="MissingConstraints">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/resultContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/resultTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="24dp"
                android:text="@string/result_most_voted_option"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/resultValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="24dp"
                app:layout_constraintTop_toTopOf="@id/resultTitle"
                app:layout_constraintBottom_toBottomOf="@id/resultTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/resultTitle"
                tools:text="Sim (6 votos)"/>

        <TextView
                android:id="@+id/resultVotesNumberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="24dp"
                android:text="@string/result_total_votes_number"
                app:layout_constraintTop_toBottomOf="@id/resultTitle"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/resultTotalVotesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="24dp"
                app:layout_constraintTop_toTopOf="@id/resultVotesNumberTitle"
                app:layout_constraintBottom_toBottomOf="@id/resultVotesNumberTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/resultVotesNumberTitle"
                tools:text="10 votos"/>

        <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/resultVotesNumberTitle"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>

    <TextView
            android:id="@+id/resultMajorErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:text="@string/result_error_major_message"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
                android:id="@+id/resultLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>